fixed input spacing issues

--- a/app/assets/stylesheets/mobile/mobile-settings.css.scss
+++ b/app/assets/stylesheets/mobile/mobile-settings.css.scss
@@ -9,7 +9,7 @@
 		position: relative;
 	} //  50 + 3*(125) + 260 + 25 + 140 + 25 +  + 15 + 140
 	#faq-questions {
-		margin-top: 50px;
+		margin-top: 20px;
 	}
 	.faq-question {
 		width: auto;
@@ -32,7 +32,7 @@
 		background: $super-light-gray;
 		margin-bottom: 25px;
 		padding-top: 15px;
-		height: 85px;
+		height: 95px;
 	}
 	.settings-group.notifications {
 		height: 245px;
